# HmpLuaStubGen

./: .gitignore  README.md  pyproject.toml
scripts/: docs_downloader.py
src/: common.py  function_parser.py  generator.py  models.py
src/HmpLuaStubGen/: __main__.py  common.py  function_parser.py  generator.py  main.py  models.py  native_parser.py
tests/: test_regex.py
