[project]
name = "hmp-lua-stub-gen-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3"
]

[dependency-groups]
dev = [
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "selenium>=4.43.0",
]
tests = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
