[project]
name = "HmpLuaStubGen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3"
]

[dependency-groups]
dev = [
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "selenium>=4.43.0",
]
tests = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools >= 82.0.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
HmpLuaStubGen = "HmpLuaStubGen.main:main"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
